# career-page-funnel

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
references/scrapers/ai-job-scraper/: .clocignore  .dockerignore  .env.example  .env.vllm  .env.vllm.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_VLLM.md  alembic.ini  docker-compose.vllm.yml  docker-compose.yml  metrics.json  pyproject.toml  test_jobspy_runner.py
references/scrapers/ai-job-scraper/.github/workflows/: tests.yml
references/scrapers/ai-job-scraper/.streamlit/: config.toml
references/scrapers/ai-job-scraper/alembic/: README.md  env.py
references/scrapers/ai-job-scraper/alembic/versions/: d555e0170c65_initial_migration_create_tables.py
references/scrapers/ai-job-scraper/config/: litellm.yaml  vllm_config.yaml
references/scrapers/ai-job-scraper/config/prometheus/: prometheus.yml
references/scrapers/ai-job-scraper/config/vllm/: production.yaml
references/scrapers/ai-job-scraper/docs/: PRD.md  README.md
references/scrapers/ai-job-scraper/docs/adrs/: ADR-001-library-first-architecture.md  ADR-002-local-environment-configuration.md  ADR-003-local-development-architecture.md  ADR-004-testing-strategy.md  ADR-005-local-database-setup.md  ADR-006-simple-data-management.md  ADR-007-service-layer-architecture.md  ADR-008-smart-database-synchronization-engine.md  ADR-009-local-development-performance.md  ADR-010-local-ai-integration.md  ADR-011-hybrid-strategy.md  ADR-012-optimized-token-thresholds.md  ADR-013-scraping-strategy.md  ADR-014-hybrid-scraping-strategy.md  ADR-015-proxy-anti-bot-integration-2025.md  ADR-016-hybrid-resilience-strategy.md  ADR-017-background-task-management-streamlit.md  ADR-018-library-first-search-architecture.md  ADR-019-analytics-evolution-strategy.md  ADR-020-application-status-tracking.md  ADR-021-modern-job-cards-ui.md  ADR-022-cost-monitoring-budget-management.md  ADR-023-local-development-docker-containerization.md  ADR-035-manual-refresh-pattern.md  ADR-037-ui-component-architecture-modernization.md  ADR-038-mobile-responsiveness-strategy.md  ADR-039-session-state-management-pattern.md  ADR_TEMPLATE.md  ARCHITECTURE_OVERVIEW.md  IMPLEMENTATION_GUIDE.md  inference_config.yaml
references/scrapers/ai-job-scraper/docs/archived/: TODO_v2.md  todo-completion-report-2025-08-27.md  validation-infrastructure-report-2025-08-27.md
references/scrapers/ai-job-scraper/docs/developers/: api-reference.md  architecture-overview.md  deployment.md  developer-guide.md  litellm-phase1-implementation.md  scraping-integration.md
references/scrapers/ai-job-scraper/docs/migration/: README.md
references/scrapers/ai-job-scraper/docs/operations/: deployment-guide.md  operations-manual.md  performance-benchmarks.md  production-readiness.md
references/scrapers/ai-job-scraper/docs/planning/: README.md  competitive-analysis.md  consolidated-requirements.md  database-strategy.md  implementation-guide.md  technical-architecture.md  url-state-management-patterns.md
references/scrapers/ai-job-scraper/docs/user/: getting-started.md  troubleshooting.md  user-guide.md
references/scrapers/ai-job-scraper/examples/: README.md  hybrid_ai_demo.py  native_progress_demo.py  phase3c_validation.py  phase3d_coordination_demo.py  search_integration_example.py  unified_scraper_example.py
references/scrapers/ai-job-scraper/scripts/: check_dead_code.py  find_duplicate_tests.py  generate_metrics.py  monitor_vllm.py  run_tests.py  start_vllm.sh  stop_vllm.sh  test_ai_integration.py  test_performance.py  test_vllm_integration.py  validate_adrs.py  validate_vllm.py  validation_test.py
references/scrapers/ai-job-scraper/src/: __init__.py  ai_client.py  ai_models.py  app_cli.py  config.py  constants.py  core_utils.py  database.py  main.py  models.py  schemas.py  seed.py
references/scrapers/ai-job-scraper/src/ai/: __init__.py  local_processor.py  local_vllm_service.py
references/scrapers/ai-job-scraper/src/database_listeners/: __init__.py  pragma_listeners.py
references/scrapers/ai-job-scraper/src/db/: migrations.py
references/scrapers/ai-job-scraper/src/interfaces/: __init__.py  scraping_service_interface.py
references/scrapers/ai-job-scraper/src/models/: __init__.py  job_models.py
references/scrapers/ai-job-scraper/src/scraping/: __init__.py  job_scraper.py  scrape_all.py
references/scrapers/ai-job-scraper/src/services/: __init__.py  analytics_service.py  company_service.py  cost_monitor.py  database_sync.py  job_service.py  search_service.py
references/scrapers/ai-job-scraper/src/ui/: __init__.py  ui_rendering.py
references/scrapers/ai-job-scraper/src/utils/: __init__.py  startup_helpers.py
references/scrapers/ai-job-scraper/tests/: README.md  conftest.py  factories.py  test_jobspy_integration.py  test_jobspy_models.py  test_jobspy_scraper.py
references/scrapers/ai-job-scraper/tests/benchmarks/: __init__.py  conftest.py
references/scrapers/ai-job-scraper/tests/e2e/: __init__.py  test_complete_workflows.py
references/scrapers/ai-job-scraper/tests/fixtures/: analytics_fixtures.py  jobspy_fixtures.py  search_fixtures.py  vcr.py
references/scrapers/ai-job-scraper/tests/integration/: __init__.py  conftest.py  test_analytics_integration.py  test_background_concurrency.py  test_comprehensive_integration_runner.py  test_database_transactions.py  test_end_to_end_workflow_validation.py  test_error_handling.py  test_mobile_responsive_design_validation.py  test_mobile_responsiveness_integration.py  test_phase4_performance_validation.py  test_phases_coordination_integration.py  test_production_readiness_validation.py  test_refactoring_integration.py  test_scraping_workflow.py  test_session_isolation.py  test_settings_integration.py  test_system_orchestration_coordination.py  test_unified_scraper.py  test_workflow_integration.py
references/scrapers/ai-job-scraper/tests/native_components/: __init__.py  framework.py  test_integration_validation.py  test_stream_a_progress.py  test_stream_b_caching.py  (+1 more)
(+227 files in other folders)
